fix stuck selection of pawns

--- a/public/css/game.css
+++ b/public/css/game.css
@@ -416,3 +416,7 @@ button.deleteButton:hover {
 button.deleteButton:disabled {
     background-color: #6a6b6a;
 }
+
+.hiddenBtn {
+    transform: translateX(110%);
+}
